GMS-34 Working version of the new function